--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
                             <p>Special thanks from <b>PROJECT UNITY</b></p>
                         </font>
                         <br>
+                        <table border="2" cellpadding="8" bgcolor="#FFFF99">
+                            <tr>
+                                <td>
+                                    <center>
+                                        <font size="4" face="Arial" color="#000080">
+                                            <b>IMPORTANT:</b>
+                                        </font>
+                                        <br>
+                                        <font size="3" face="Times New Roman" color="#000000">
+                                            Please be seated at table <b><font size="4">THETA</font></b>
+                                        </font>
+                                    </center>
+                                </td>
+                            </tr>
+                        </table>
+                        <br>
                         <img src="https://web.archive.org/web/19961219202222im_/http://www.microsoft.com/library/images/gifs/homepage/1ptrans.gif" width="1" height="10">
                         <br>
                         <font size="2" color="#0000FF">
