Update ShardTech page with corporate professional styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body bgcolor="#C0C0C0">
     <center>
+        <!-- Add logo above the welcome banner -->
+        <img src="logo.gif" alt="ShardTech Logo" border="2" width="200" height="100">
+        <br><br>
+        
         <table border="3" cellpadding="10" cellspacing="0" width="600">
             <tr>
                 <td bgcolor="#000080">
@@ -70,7 +74,7 @@
                     <center>
                         <font size="2" face="Courier New">
                             This page best viewed with Netscape Navigator 1.0<br>
-                            © 1993 ShardTech Corporation - All Rights Reserved<br>
+                            © 1989 ShardTech Corporation - All Rights Reserved<br>
                             <img src="https://web.archive.org/web/19961219202222im_/http://www2.eff.org/images/ribbonani.gif" alt="Free Speech">
                         </font>
                     </center>
