Update ShardTech page with corporate professional styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body bgcolor="#C0C0C0">
     <center>
         <!-- Add logo above the welcome banner -->
-        <img src="logo.gif" alt="ShardTech Logo" border="2" width="200" height="100">
+        <img src="logo.823e582e-fc64-452e-b9f6-ab2f246f6eee.png" alt="ShardTech Logo" border="2" width="250" height="150">
         <br><br>
         
         <table border="3" cellpadding="10" cellspacing="0" width="600">
