Update ShardTech page with corporate professional styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </font>
                         <hr color="#000000" size="2">
                         <font size="3" face="Times New Roman">
-                            <p>Join us for a celebration in your honor!</p>
+                            <p>Thank you for joining us in this historic celebration of you!</p>
                             <p>Special thanks from <b>PROJECT UNITY</b></p>
                         </font>
                         <br>
