Update ShardTech page with corporate professional styling

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body bgcolor="#C0C0C0">
     <center>
-        <!-- Add logo above the welcome banner -->
-        <img src="logo.823e582e-fc64-452e-b9f6-ab2f246f6eee.png" alt="ShardTech Logo" border="2" width="250" height="150">
-        <br><br>
+        <!-- Logo removed from here -->
         
         <table border="3" cellpadding="10" cellspacing="0" width="600">
             <tr>
@@ -57,6 +55,8 @@
                         <br>
                         <img src="https://web.archive.org/web/19961219202222im_/http://www.microsoft.com/library/images/gifs/homepage/1ptrans.gif" width="1" height="10">
                         <br>
+                        <img src="./shardtech.png" alt="ShardTech Logo" width="200">
+                        <br><br>
                         <font size="2" color="#0000FF">
                             <u>Click here to continue >></u>
                         </font>
@@ -75,7 +75,6 @@
                         <font size="2" face="Courier New">
                             This page best viewed with Netscape Navigator 1.0<br>
                             © 1989 ShardTech Corporation - All Rights Reserved<br>
-                            <img src="https://web.archive.org/web/19961219202222im_/http://www2.eff.org/images/ribbonani.gif" alt="Free Speech">
                         </font>
                     </center>
                 </td>
